Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/HiddenAbstractMethod/Test.out
Child.java:5:8: compiler.err.does.not.override.abstract: two.Child, method(), one.Parent
1 error
